unpackaged/main/default/objects/Article_View__c/Article_View__c.object-meta.xml
<CustomObject>
    <description>One record per user per knowledge article: who viewed it, how many times, and when last. Written by NexSArticleEngagementController.logView on article load in the NexS help center (internal app + Experience Cloud sites). Article_Id__c holds the version-stable Knowledge__ka Id.</description>
    <label>Article View</label>
    <nameField>
        <displayFormat>AV-{000000}</displayFormat>
        <label>Article View Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Views</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>