unpackaged/main/default/objects/Article_View__c/fields/Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Article_Id__c</fullName>
    <description>Knowledge__ka Id (version-stable across republishes) — NOT the Knowledge__kav version Id.</description>
    <label>Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>