unpackaged/main/default/objects/Article_View__c/fields/Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_Title__c</fullName>
    <description>Denormalized article title, refreshed on every view, so reports read without Id lookups.</description>
    <label>Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>