unpackaged/main/default/objects/Article_View__c/fields/Last_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed__c</fullName>
    <description>When this user last opened the article. First view = CreatedDate.</description>
    <label>Last Viewed</label>
    <type>DateTime</type>
</CustomField>