unpackaged/main/default/objects/Article_View__c/fields/User_Article_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Article_Key__c</fullName>
    <description>{18-char User Id}_{18-char Knowledge__ka Id}. Unique key that makes the per-user-per-article upsert race-safe.</description>
    <externalId>true</externalId>
    <label>User Article Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>