unpackaged/main/default/objects/Article_View__c/fields/View_Count__c.field-meta.xml
<CustomField>
    <fullName>View_Count__c</fullName>
    <description>Number of times this user has opened this article. Concurrent increments may occasionally drop one — analytics-grade, not audit-grade.</description>
    <label>View Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>